<resources>
    <string name="app_name">Girodicer</string>
    <string name="app_logo">The Applications Logo</string>

    <!-- user authentication -->
    <!-- field hints -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <!-- input validation -->
    <string name="name_format">Up to 12 english letters</string>
    <string name="password_format">Between 6 and 20 characters</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <!-- submit buttons -->
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <!-- text links -->
    <string name="register">No account yet? Create one</string>
    <string name="go_to_sign_in">Already have an account? Sign In</string>
    <!-- post registration -->
    <string name="email_confirmation_explanation">Thanks for registering to be a drone operator!
        \n\n Please check your email for mail from us confirming your account.
        \n\n Click the provided path in the email to confirm your account to be
        able to sign in.</string>

    <!-- sliding drawer navigation -->
    <!-- required descriptive text -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- always visible, drone operator related -->
    <string name="account">Account</string>
    <string name="sign_out">Sign Out</string>
    <!-- @client manager -->
    <string name="client">Client</string>
    <string name="add_client">Add Client</string>
    <string name="operator_name">Operator first name</string>
    <!-- upon client selection, inspection related -->
    <string name="inspections">Inspections</string>
    <string name="end_inspection">End Inspection</string>
    <string name="current_inspection">Current Inspection</string>
    <string name="past_inspections">Past Inspections</string>

    <!-- client manager activity -->
    <string name="client_manager_title">Client Manager</string>
    <string name="no_clients">You have no clients.</string>
    <string name="street_address">Street Address</string>
    <string name="city_town">City/Town</string>
    <string name="state">State</string>
    <string name="zip_code">ZIP Code</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="state_format">State must be 2 letters</string>
    <string name="zip_format">ZIP Code must be 5 digits</string>
    <string name="error_check_fields">Error occurred, please check fields and try again.</string>
    <string name="client_created">Client created successfully</string>

    <!-- current inspection activity -->
    <string name="current_inspection_title">Current Inspection</string>
    <!-- 1st step: establish bluetooth connection -->
    <string name="no_bt_adapter">Your device does not have a bluetooth adapter.</string>
    <string name="bte_not_enabled">Unable to connect to drone because bluetooth is not enabled.</string>
    <string name="bte_connect_failed">Failed to connect to drone.</string>
    <string name="bte_timeout_status">Timeout occurred while waiting for initial status signal.</string>
    <string name="bts_connecting">Trying to connect to drone &#8230;</string>
    <string name="waiting_for_status">Waiting to receive initial status from drone &#8230;</string>
    <!-- 2nd step: establish house boundaries -->
    <!-- 3rd step: drone is active, keep track of status -->
    <string name="drone_active_stay_alert">
        Keep your eyes on the drone as it performs the inspection.</string>
    <string name="status_location">Location: </string>
    <string name="status_location_unit">(Lat,Lng)</string>
    <string name="status_velocity">Velocity: </string>
    <string name="status_velocity_unit">inf m/s</string>
    <string name="status_battery">Battery</string>
    <string name="status_battery_unit">int</string>

    <!-- past inspections activity -->
    <string name="past_inspections_title">Past Inspections</string>
    <string name="no_past_inspections">There are no inspections for this client.</string>
    <string name="begin_new_inspection">Begin New Inspection</string>

    <!-- inspection activity -->
    <string name="inspection_title">Inspection</string>
    <string name="client_inspection_portal">Client Inspection Portal</string>

    <!-- dialogs -->
    <string name="cannot_sign_out">
        Cannot sign out while an inspection is in progress.
    </string>
    <string name="confirm_end_inspection">Are you sure you want to end the current inspection?</string>
    <string name="no_active_inspection">There is no active inspection to end.</string>

    <!-- notification bar -->
    <!-- bluetooth state -->
    <string name="bt_state_connecting">Connecting to drone &#8230;</string>
    <string name="bt_state_connected">Connected to drone</string>
    <string name="bt_state_connection_lost">Drone connection lost, trying to reconnect &#8230;</string>
    <!-- active inspection phase -->
    <string name="ci_scanning">Scan Phase</string>
    <string name="ci_salting">Salting Phase</string>
    <string name="ci_data_transfer">Transfer Phase</string>
    <string name="ci_uploading">Upload Phase</string>

    <!-- buttons -->
    <string name="submit">Submit</string>
    <string name="connect">Connect</string>
    <string name="okay">Okay</string>
    <string name="try_again">Try Again</string>
    <string name="next">Next</string>
    <string name="got_it">Got it!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- placeholder text -->
    <string name="thumbnail_label">Label</string>
    <string name="image">Image</string>
    <string name="general_message">General message</string>
    <string name="loading_message">Loading message</string>

    <!-- other -->
    <string name="uploading_aerial_images">Uploading Aerial Images</string>
    <string name="uploading_thermal_images">Uploading Thermal Images</string>
    <string name="uploading_rgb_images">Uploading Roof Edge Images</string>
    <string name="drone_is_in_the_air">Drone is in the air</string>
    <string name="drone_is_landed">Drone is landed</string>
    <string name="image_not_yet_received">Image not yet received</string>
    <string name="need_rgb_images">
        Roof edge images are still being transferred. Need all roof edge images before beginning to service ice dams.
    </string>
    <string name="drone_busy_in_flight">Drone is busy in flight, need to wait until the drone has landed.</string>
    <string name="servicing_in_process">In Process &#8230;</string>
    <string name="waiting_for_service_confirmation">Waiting For Confirmation</string>
    <string name="skip_salting">Skip Salting</string>
    <string name="no_icedam_points_to_send">There are no confirmed icedam points to send</string>
    <string name="finish_salting">Finish Salting</string>
    <string name="send_icedam_points">Send Icedam Points</string>
    <string name="service_icedam">Service Icedam</string>
    <string name="confirm_icedam">Confirm Icedam</string>
    <string name="is_this_an_icedam">Is the following point, coming from the image below, an icedam?</string>
    <string name="waiting_for_confirmation">Waiting for confirmation from drone &#8230;</string>
    <string name="get_path">Get Path</string>
    <string name="start_inspection">Start Inspection</string>
    <string name="terminate">Terminate Connection</string>
    <string name="open_menu">Open Menu</string>
    <string name="error_occurred">Error occurred</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="grabbing_data">Grabbing data &#8230;</string>
    <string name="image_description">image</string>
    <string name="google_maps_key">AIzaSyB8EAWQMMdbJAIonkn_lmI6AWlnuQsEJsc</string>
    <string name="drone_bt_name">girodicer-minnow</string>
</resources>
