<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_name"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:focusable="true"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/password"
        android:layout_alignStart="@id/password"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/sign_in"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textSize="16sp"/>
</RelativeLayout>