<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:focusable="true"
        android:hint="@string/first_name"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:focusable="true"
        android:hint="@string/last_name"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionGo" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:focusable="true"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:imeOptions="actionNext" />

</RelativeLayout>