<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_name"/>

    <TextView
        android:id="@+id/explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/email_confirmation_explanation"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/okay_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/okay"/>
</RelativeLayout>
