<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tberroa.girodicerapp.activities.ConfirmEmailActivity"
    tools:showIn="@layout/activity_confirm_email">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/app_name"
        android:contentDescription="@string/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="45dp"
        />

    <TextView
        android:id="@+id/explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/email_confirmation_explanation"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/okay_confirm"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/okay"
        />

</RelativeLayout>
